2009-01-16 Jesse Kornblum <research@jessekornblum.com>

	* Switching from /* comments to // comments in code to allow
	  for commenting out whole functions when necessary.

	* Added sanity checking to helper functions, changed some variable
	  names from single character values to more descriptive names.
	

2009-01-15 Jesse Kornblum <research@jessekornblum.com>

	* Removed vestigial code from include/md5.h and the other
	  algorithms in that directory. This was code that had been
	  commented out for a while now.

	* Updated email address in this ChangeLog for all entries.

	* Added include directory to the 'make preflight' directive
	
	
2009-01-14 Jesse Kornblum <research@jessekornblum.com>

	* Fixed chop_line call against uninitialized variable
	  in hashdeep/match.c. Added sanity checking to chop_line
	  to keep this from happening again.

	* Added file format documentation for hashdeep.

	
2009-01-09 Jesse Kornblum <research@jessekornblum.com>

	* Changed hashdeep to break long command lines into multiple
	  lines in the headers of known files. Not doing so leads to
	  problems with extremely long lines. Those lines end up as
	  (harmless) warnings about bad hashes. See bug report 2496029
	  for more details.
	

2009-01-08 Jesse Kornblum <research@jessekornblum.com>

	* Added detection and avoidance of NTFS Junction Points
	  to avoid infinite loops on Windows systems. 
	  See bug report 2492520 for more details.
	
	* Updated email address in AUTHORS file.


2008-10-22 Jesse Kornblum <research@jessekornblum.com>
	
	* Rewrote the parsing of known files in hashdeep in response 
	  to bug 2184219
	  relating to filenames with commas in them. We now determine
	  the expected number of columns from the header and use that
	  to parse the remainder of the file.
	  This should eventually allow us to remove our dependency on
	  strsep.

	* Fixed a minor hashdeep bug where hashes were considered
	  invalid if they contained too few characters, but not too many.

	